# tieshan-photo-server

./: .gitignore  README.md  batch_scan.py  download_models.py  pyproject.toml  run_pilot.py
.githooks/: pre-commit
src/: config.py  date_estimate.py  db.py  gemini_vision.py  image_embed.py  log.py  matching.py  persons.py  photo_cards.py  pipeline.py  preprocessing.py  scene_annotate.py  server.py
src/tools/: photo_add_person.py  photo_anchor.py  photo_cluster.py  photo_compare.py  photo_date.py  photo_detail.py  photo_find.py  photo_persons.py  photo_reject.py  photo_scene.py  photo_search.py  photo_stats.py  photo_unanchor.py  photo_who.py
src/web/: routes.py  ui.py
tests/: conftest.py  test_anchor_reject.py  test_db.py  test_image_embed.py  test_matching.py  test_photo_cards.py  test_pipeline.py  test_web_routes.py
