[project]
name = "tieshan-photo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.18",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "transformers>=4.40",
    "torch>=2.1",
    "Pillow>=10.0",
    "sentencepiece>=0.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
